Version 10.17 - 20 March 2008

- use UUID by default (for diskdrake and draklive-install)
- finish-install:
  o write modprobe.conf after configuring network
  o do not configure network if already up
  o allow to use a simplified time step
    (no timezone selection, ntp settings as advanced)
- move functions to get available space from installer
  (to be used in draklive-install)
- localedrake: update OpenOffice/BrOffice alternative according to
  selected lang (#37820)

Version 10.16.1 - 18 March 2008

- handle position for paned widgets (needed for rpmdrake, #38762)

Version 10.16 - 18 March 2008

- adduserdrake:
  o display kdm/gdm icon again (was disabled on year ago)
- do not write aliases for asus_acpi and thinkpad_acpi in
  modprobe.preload, the modules are now handled by coldplug
- draksec
  o do not continue if installing msec crashed or was canceled (#38911)
- localdrake:
  o do not make /etc/sysconfig/i18n readable only by root in high
    security level (#39027)
- scannerdrake:
  o use provides instead of package name now that gurpmi handle them

Version 10.15 - 14 March 2008

- fix changing UID on forking
- scannerdrake: use package name instead of Provides.
- create Gtk2::Notify::Queue out of Gtk2::NotificationBubble::Queue
  for libnotify support in net_applet (#37509)

Version 10.12 - 13 March 2008

- fix gurpmi path (#38679)
- diskdrake:
  o graphical error message when "No hard drives found" (#38699)
    (otherwise drakbug will catch it and suggest to report a bug...)
- draksound:
  o enable to set 5.1 channels (#38796)
- scannerdrake: fix undefined variable $in (#36387, #37039)

Version 10.11 - 11 March 2008

- diskdrake:
  o really fix partition device name for some dmraid (missing "p", cf #38363)
- draksound (#37826):
  o add support to enable/disable ALSA to PA routing (#37826)
  o add support to enable/disable PulseAudio
  o add support to enable/disable user switching
  o display trouble shooting when there's no driver too