@@ -1,3 +1,6 @@
+- partitioning wizard: do not show error message in wizard mode when
+  cancel is clicked (clean wizard window instead)
+
 Version 10.17 - 20 March 2008
 
 - use UUID by default (for diskdrake and draklive-install)
